Fixed table headers and app name spacing

--- a/webapp/assets/dashboard.css
+++ b/webapp/assets/dashboard.css
@@ -71,9 +71,9 @@ body {
  */
 
 .navbar-brand {
-  padding-top: .75rem;
-  padding-bottom: .75rem;
-  font-size: 1rem;
+  padding-top: .625rem;
+  padding-bottom: .625rem;
+  font-size: 1.25rem;
   background-color: rgba(0, 0, 0, .25);
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
 }
